# news-app-fastapi

./: alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 6c586f8791fb_initial.py  d766f0a76837_add_post_tags_table.py
src/: config.py  database.py
src/auth/: crud.py  deps.py
src/database/: __init__.py  database.py
src/database/models/: __init__.py  base.py  post.py  post_tag.py  tag.py  user.py
src/posts/: crud.py  schemas.py  shemas.py
src/routers/: auth.py  posts.py  users.py
src/users/: schemas.py  shemas.py
